--- a/Study/echarts学习/static/echarts-2.2.7-all/doc/asset/css/echartsHome.css
+++ b/Study/echarts学习/static/echarts-2.2.7-all/doc/asset/css/echartsHome.css
@@ -266,7 +266,7 @@ a#icon-resize:hover {
     text-decoration: blink;
 }
 
-/*doc*/
+/*README.md*/
 .panel {
     background-color:transparent;
     margin-left: -15px;
