--- a/Study/实战/微金所/css/main.css
+++ b/Study/实战/微金所/css/main.css
@@ -4,6 +4,97 @@
         -所有模块分割线，统一使用底部方式
  */
 
+/* bootstrap 扩展 */
+.navbar-itcast {
+    height: 82px;
+    background-color: #f8f8f8;
+    border-color: #e7e7e7;
+}
+.navbar-itcast .navbar-brand {
+    color: #777;
+}
+.navbar-itcast .navbar-brand:hover,
+.navbar-itcast .navbar-brand:focus {
+    color: #5e5e5e;
+    background-color: transparent;
+}
+.navbar-itcast .navbar-text {
+    color: #777;
+}
+.navbar-itcast .navbar-nav > li > a {
+    padding-top:30px;
+    padding-bottom:30px;
+    color: #777;
+}
+
+
+.navbar-itcast .navbar-nav > li > a:hover,
+.navbar-itcast .navbar-nav > li > a:focus {
+    color: #333;
+    background-color: transparent;
+    border-bottom:2px solid #d9534f;
+
+}
+.navbar-itcast .navbar-nav > .active > a,
+.navbar-itcast .navbar-nav > .active > a:hover,
+.navbar-itcast .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #e7e7e7;
+    border-bottom:2px solid #d9534f;
+}
+.navbar-itcast .navbar-nav > .disabled > a,
+.navbar-itcast .navbar-nav > .disabled > a:hover,
+.navbar-itcast .navbar-nav > .disabled > a:focus {
+    color: #ccc;
+    background-color: transparent;
+}
+.navbar-itcast .navbar-toggle {
+    border-color: #ddd;
+}
+.navbar-itcast .navbar-toggle:hover,
+.navbar-itcast .navbar-toggle:focus {
+    background-color: #ddd;
+}
+.navbar-itcast .navbar-toggle .icon-bar {
+    background-color: #888;
+}
+.navbar-itcast .navbar-collapse,
+.navbar-itcast .navbar-form {
+    border-color: #e7e7e7;
+}
+.navbar-itcast .navbar-nav > .open > a,
+.navbar-itcast .navbar-nav > .open > a:hover,
+.navbar-itcast .navbar-nav > .open > a:focus {
+    color: #555;
+    background-color: #e7e7e7;
+}
+
+.navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 26px;
+    margin-right: 15px;
+    margin-bottom: 26px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+.navbar-toggle:focus {
+    outline: 0;
+}
+.navbar-toggle .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+}
+.navbar-toggle .icon-bar + .icon-bar {
+    margin-top: 4px;
+}
+/*  /bootstrap 扩展 */
+
 /* 全局样式 */
 /* 字体 */
 body {
@@ -30,20 +121,38 @@ body {
     content: "\e909";
     font-size: 15px;
 }
+.icon-logo::before {
+    content: "\e93e";
+}
 
-#topbar {
+.icon-icon::before {
+    content: "\e920";
+}
+
+/* /全局样式 */
+
+/* header */
+#header {
+    height: 200px;
+}
+
+#header > .topbar {
     height: 40px;
     line-height: 40px;
-    color: #777;
-    font-size: 12px;
     border-bottom: 1px solid #c0c0c0;
 }
 
-#topbar .container .row div+div {
+#header > .topbar > .container .row > div {
+    height: 40px;
+    color: #777;
+    font-size: 12px;
+}
+
+.topbar .container .row div+div {
     border-left: 1px solid #c0c0c0;
 }
 
-#topbar .mobile {
+.topbar .mobile {
     color: #777;
     font-size: 12px;
     text-decoration: none;
@@ -53,16 +162,29 @@ body {
     text-decoration: none;
 }
 
-#topbar .mobile img {
+#header .mobile > img {
     display: none;
     position: absolute;
-    top: 29px;
     left: 50%;
     margin-left: -60px;
+    top: 30px;
+    z-index: 1001;
 }
 
-#topbar .mobile:hover > img {
+#header .mobile:hover > img {
     display: block;
 }
+#header .icon-icon {
+    font-size: 50px;
+    color: #E92322;
+    line-height: 50px;
+    vertical-align: middle;
+}
 
-/* #全局样式 */
+#header .icon-logo {
+    font-size: 32px;
+    color: #333;
+    line-height: 50px;
+    vertical-align: middle;
+}
+/* /header */
